<resources>
    <string name="app_name">EspressoSample</string>
    <string name="change_name">Change Label</string>
    <string name="changed">Changed!</string>
    <string name="hello_world">Hello World!</string>
    <string name="reset">Reset</string>
    <string name="set">Set</string>
    <string name="empty_input">El texto no puede estar vacío</string>
    <string name="im_a_footer">Hi, Im a footer text</string>
    <string name="show_as_footer">Show as footer</string>
    <string name="write_your_footer_here">Write your footer here</string>
</resources>
